cmake_minimum_required(VERSION 3.4)
add_definitions(-Wall -O3)
set(LIBRARY SortsLib)
project(${LIBRARY})
set(CMAKE_CXX_STANDARD 14)
set(INCLUDE include/sorts.h)
set(SOURCE  src/sorts.cpp)
include_directories("include")
add_library(${CMAKE_PROJECT_NAME} STATIC ${INCLUDE} ${SOURCE})
add_subdirectory(sample)
