cmake_minimum_required(VERSION 3.5)
#add_definitions(-Wall -O3)
set(LIBRARY SortsLib)
project(${LIBRARY})
set(CMAKE_CXX_STANDARD 14)
set(INCLUDE include/sorts.h)
set(SOURCE  src/sorts.cpp)
include_directories("include")
find_package(OpenMP REQUIRED)
if(OPENMP_FOUND)
    message("------------------OPENMP IS FOUND!!!---------------")
    #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
else(OPENMP_FOUND)
    message("------------------ERROR: OpenMP could not be found.----------------------")
endif(OPENMP_FOUND)
add_library(${CMAKE_PROJECT_NAME} STATIC ${INCLUDE} ${SOURCE})
add_subdirectory(sample)
